support for compdb

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,4 +2,4 @@ project(Mesa)
 
 include_directories(.)
 
-add_executable(Mesa Mesa.cpp MesaGenerator.cpp MesaParser.cpp MesaProcessor.cpp MesaUtils.cpp ProjectScriptlets.cpp StdScriptlets.cpp WorkspaceScriptlets.cpp)
+add_executable(Mesa Mesa.cpp MesaMakefileGenerator.cpp MesaParser.cpp MesaProcessor.cpp MesaUtils.cpp ProjectScriptlets.cpp StdScriptlets.cpp WorkspaceScriptlets.cpp)
